cabal-version:       >=1.10
name:                cis5520-basics
version:             0.1.0.0
synopsis:            Class materials from CIS 5520, UPenn
description:         Course introduction: basics
bug-reports:         cis5520@seas.upenn.edu
license:             MIT
license-file:        LICENSE
maintainer:          sweirich@seas.upenn.edu
-- copyright:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  exposed-modules:     Basics
  build-depends:         base  
                       , HUnit 
                       , filepath 
                       , containers
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  default-language:
    Haskell2010
  -- these extensions are enabled for GHC2021, turning them on now for 
  -- future compatibility
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

  

